<resources>
    <string name="app_name">ReadersCommunity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="timing">Timing</string>
    <string name="venue">Venue: </string>
    <string name="branch">Branch: </string>
    <string name="sem">Semester: </string>
    <string name="what_to_bring">What to Bring: </string>
    <string name="extra">Extra: </string>
</resources>